Exclude university degree plan PDFs from version control
- Add pattern to ignore *Comprehensive-Four-Year-Plan*.pdf files
- Protects against committing potentially copyrighted university documents
- Test cases reference these files locally without including the PDFs

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 course_history.txt
 sample_courses.txt
 
+# University degree plan documents (may be copyrighted)
+*Comprehensive-Four-Year-Plan*.pdf
+
 # Python
 __pycache__/
 *.py[cod]
